--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,42 +1,51 @@
-#root {
-  max-width: 1280px;
+* {
+  box-sizing: border-box;
+  font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+body,
+html {
+  height: 100%;
+}
+
+.root {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  justify-content: center;
+}
+
+header {
+  background-color: #ccc;
+  padding: 30px 0;
+}
+
+footer {
+  background-color: #666;
+  color: white;
+  padding: 30px 0;
+}
+
+.y-wrap {
   margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 90%;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+button {
+  cursor: pointer;
+  max-width: 120px;
+  padding: 20px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+nav {
+  display: flex;
+  justify-content: space-around;
 }
